// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

// Looking for ways to speed up your queries, or scale easily with your serverless or edge functions?
// Try Prisma Accelerate: https://pris.ly/cli/accelerate-init

generator client {
  provider = "prisma-client"
  output   = "../generated/prisma"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

model User {
  id           String          @id @default(uuid())
  email        String          @unique
  username     String
  password     String
  createdAt    DateTime        @default(now())

  documents    Document[]
  accounts     Account[]
  conversations AiConversation[]
}

/**
 * Logical account that links document transactions and live transactions.
 * For example: a bank account, credit card, or mobile money wallet.
 */
model Account {
  id           String             @id @default(uuid())
  userId       String?
  user         User?              @relation(fields: [userId], references: [id])
  externalRef  String?            // e.g. PaySim account id, card number hash
  accountType  AccountType
  currency     String             @default("USD")
  createdAt    DateTime           @default(now())

  documentTransactions DocumentTransaction[]
  liveTransactions     LiveTransaction[]

  @@index([userId])
  @@index([externalRef])
}

/**
 * Any uploaded document: bank statement, invoice, payslip, etc.
 */
model Document {
  id               String                  @id @default(uuid())
  userId           String?
  user             User?                   @relation(fields: [userId], references: [id])

  title            String?
  originalFilename String
  storagePath      String                  // local path or S3 key
  docType          DocumentType
  uploadedAt       DateTime                @default(now())
  parsedAt         DateTime?
  sourceDataset    SourceDataset?          // e.g. SROIE, FUNSD, SYNTHETIC

  transactions     DocumentTransaction[]
  riskSummary      DocumentRiskSummary?
  anomalies        AnomalyEvent[]          @relation("DocumentAnomalies")
  conversations    AiConversation[]

  @@index([userId])
  @@index([docType])
}

/**
 * Normalized line items extracted from documents.
 * For bank statements: transactions.
 * For invoices: invoice lines.
 * For payslips: earnings/deductions.
 */
model DocumentTransaction {
  id          String             @id @default(uuid())
  documentId  String
  document    Document           @relation(fields: [documentId], references: [id])

  accountId   String?
  account     Account?           @relation(fields: [accountId], references: [id])

  itemDate    DateTime?
  description String?
  amount      Float
  currency    String
  balanceAfter Float?            // useful for bank statements
  lineType    DocumentLineType   // BANK_TRANSACTION, INVOICE_LINE, PAYSLIP_EARNING, ...

  category    String?
  meta        Json?              // free-form extra fields (qty, tax, period, etc.)

  anomalies   AnomalyEvent[]     @relation("DocTxnAnomalies")

  @@index([documentId])
  @@index([accountId])
  @@index([lineType])
}

/**
 * Live transaction records coming from streaming datasets (PaySim, UCI, or real).
 * These are fed by Kafka consumers.
 */
model LiveTransaction {
  id             String             @id @default(uuid())
  accountId      String?
  account        Account?           @relation(fields: [accountId], references: [id])

  sourceDataset  StreamDataset
  externalId     String?            // original dataset row id or key

  txnTime        DateTime
  amount         Float
  currency       String
  direction      TransactionDirection

  raw            Json?              // full raw row from dataset
  features       Json?              // engineered features used for models
  labelIsFraud   Boolean?           // ground truth label (from dataset, for evaluation)

  ingestedAt     DateTime           @default(now())

  anomalies      AnomalyEvent[]     @relation("LiveTxnAnomalies")

  @@index([accountId])
  @@index([sourceDataset])
  @@index([txnTime])
}

/**
 * Anomaly events generated by rules/ML, either for document lines,
 * document summaries, or live streaming transactions.
 */
model AnomalyEvent {
  id                   String                @id @default(uuid())
  sourceType           AnomalySourceType     // DOCUMENT_LINE, DOCUMENT_SUMMARY, LIVE_STREAM

  documentId           String?
  document             Document?             @relation("DocumentAnomalies", fields: [documentId], references: [id])

  documentTransactionId String?
  documentTransaction   DocumentTransaction? @relation("DocTxnAnomalies", fields: [documentTransactionId], references: [id])

  liveTransactionId    String?
  liveTransaction      LiveTransaction?      @relation("LiveTxnAnomalies", fields: [liveTransactionId], references: [id])

  accountId            String?
  anomalyScore         Float
  severity             AnomalySeverity
  reason               String?

  createdAt            DateTime              @default(now())

  @@index([documentId])
  @@index([documentTransactionId])
  @@index([liveTransactionId])
  @@index([accountId])
  @@index([severity])
}

/**
 * Roll-up risk summary per document (for quick listing & filtering).
 */
model DocumentRiskSummary {
  documentId         String    @id
  document           Document  @relation(fields: [documentId], references: [id])

  overallRisk        RiskLevel
  numAnomalies       Int
  totalAmountFlagged Float
  lastUpdated        DateTime  @default(now())
}

/**
 * Optional: conversation history when the AI assistant explains documents.
 */
model AiConversation {
  id          String         @id @default(uuid())
  userId      String?
  user        User?          @relation(fields: [userId], references: [id])

  documentId  String?
  document    Document?      @relation(fields: [documentId], references: [id])

  createdAt   DateTime       @default(now())

  messages    AiMessage[]
}

model AiMessage {
  id              String          @id @default(uuid())
  conversationId  String
  conversation    AiConversation  @relation(fields: [conversationId], references: [id])

  role            AiRole
  content         String
  createdAt       DateTime        @default(now())

  @@index([conversationId])
}

/* ===========================
   ENUMS
   =========================== */

enum AccountType {
  BANK_ACCOUNT
  CREDIT_CARD
  MOBILE_MONEY
  OTHER
}

enum DocumentType {
  BANK_STATEMENT
  INVOICE
  PAYSLIP
  OTHER
}

enum DocumentLineType {
  BANK_TRANSACTION
  INVOICE_LINE
  PAYSLIP_EARNING
  PAYSLIP_DEDUCTION
  OTHER
}

/**
 * Where the document came from (useful for experiments).
 * e.g. SROIE/FUNSD for invoices, SYNTHETIC for payslips.
 */
enum SourceDataset {
  BANK_TEMPLATE
  SROIE
  FUNSD
  SYNTHETIC
  OTHER
}

/**
 * Which streaming dataset produced the live transaction.
 */
enum StreamDataset {
  PAYSIM
  UCI_CCF
  REAL
}

enum TransactionDirection {
  DEBIT
  CREDIT
  TRANSFER_IN
  TRANSFER_OUT
  OTHER
}

enum AnomalySourceType {
  DOCUMENT_LINE
  DOCUMENT_SUMMARY
  LIVE_STREAM
}

enum AnomalySeverity {
  LOW
  MEDIUM
  HIGH
  CRITICAL
}

enum RiskLevel {
  LOW
  MEDIUM
  HIGH
}

enum AiRole {
  USER
  ASSISTANT
  SYSTEM
}